--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullstack_template",
   "version": "1.0.0",
-  "description": "",
+  "description": "- npm install - modify connection string - create database - npm run start:dev - npm run build:dev",
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack --watch --mode=development",
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "react-router-dom": "^6.16.0"
   }
